Enhance markdown headings in ml_models.ipynb for better structure and readability
- Changed main headings to a more prominent level for improved visibility.
- Updated subheadings to maintain a consistent hierarchy throughout the document.

--- a/ml_models.ipynb
+++ b/ml_models.ipynb
@@ -5,10 +5,10 @@
    "id": "0d6d807a",
    "metadata": {},
    "source": [
-    "# 🧠 ML Models From Scratch — Flight Delay Prediction\n",
-    "## Complete ML Pipeline: Data Preparation → Feature Importance → Model Training\n",
+    "### 🧠 ML Models From Scratch — Flight Delay Prediction\n",
+    "### Complete ML Pipeline: Data Preparation → Feature Importance → Model Training\n",
     "\n",
-    "**Challenge**: Implement ML algorithms using **only pure Python + NumPy** (no scikit-learn, TensorFlow, etc.)\n",
+    "#### **Challenge**: Implement ML algorithms using **only pure Python + NumPy** (no scikit-learn, TensorFlow, etc.)\n",
     "\n",
     "**Content**:\n",
     "- ✅ **Readable Dataset** with human-interpretable features\n",
@@ -23,7 +23,7 @@
    "id": "3b3aa959",
    "metadata": {},
    "source": [
-    "## 📦 Setup: Imports, Dataset Generation & Helper Functions"
+    "#### 📦 Setup: Imports, Dataset Generation & Helper Functions"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "id": "9999b8c1",
    "metadata": {},
    "source": [
-    "## 📋 Dataset Overview & Feature Explanations\n",
+    "### 📋 Dataset Overview & Feature Explanations\n",
     "\n",
     "### **Dataset Description**\n",
     "Synthetic flight dataset with **300 samples** simulating real-world flight characteristics. Features are realistic and **correlated with delays**.\n",
